# pitchmind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: sql-verifier.md
.claude/commands/: ask.md  etl.md  new-exemplar.md  serve.md  ship-check.md
api/: __init__.py  main.py
docs/: SPEC.md
eval/: gold_breadth.jsonl  gold_core.jsonl
knowledge/: exemplars.jsonl  glossary.md  schema_docs.md
pitchmind/: __init__.py  cli.py  config.py  db.py  eval_runner.py  llm.py  trace_store.py
pitchmind/agent/: __init__.py  executor.py  loop.py  planner.py  resolve.py  retrieval.py  scope.py  sql_gen.py  synthesis.py  types.py  verifier.py  viz.py
pitchmind/etl/: __init__.py  catalog.py  download.py  entity_index.py  flatten.py  load_duckdb.py  marts.py  pipeline.py
tests/: conftest.py  test_catalog.py  test_marts_grain.py  test_scope.py  test_verifier.py
web/: .env.local.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
