[project]
name = "pitchmind"
version = "0.1.0"
description = "Natural-language football analytics agent over StatsBomb open event data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "duckdb>=1.1",
    "statsbombpy>=1.14",
    "mplsoccer>=1.4",
    "rapidfuzz>=3.9",
    "pydantic>=2.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.scripts]
pitchmind = "pitchmind.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pitchmind*", "api*"]

[dependency-groups]
dev = ["pytest>=8.0"]
